Loading the xml works now at least for discrete issues, only the negotiator.analysis package contains yet another direct usage of the accursed array indexing. Which breaks when using our code.